Closed Bug 590883 Opened 15 years ago Closed 15 years ago

Crash [@ ExternalResourceShower] when closing print preview with external filter

Categories

(Core :: DOM: Core & HTML, defect, P1)

x86
Windows 7
defect

Tracking

()

VERIFIED FIXED
mozilla2.0b5
Tracking Status
blocking2.0 --- final+

People

(Reporter: martijn.martijn, Assigned: bzbarsky)

References

Details

(Keywords: crash, regression, testcase)

Crash Data

Attachments

(3 files)

See upcoming testcase, which crashes current trunk build on closing print preview. This regressed between 2010-08-09 and 2010-08-13: http://hg.mozilla.org/mozilla-central/pushloghtml?startdate=2010-08-09+04%3A00%3A00&enddate=2010-08-13+04%3A00%3A00 If wanted, I can look for a more narrow regression range. http://crash-stats.mozilla.com/report/index/a60c998a-a55e-4d74-85b9-d67b62100826 0 xul.dll ExternalResourceShower content/base/src/nsDocument.cpp:848 1 xul.dll nsBaseHashtable<nsCharPtrHashKey,nsAutoPtr<nsCOMArray<nsIObserver> >,nsCOMArray<nsIObserver>*>::s_EnumReadStub obj-firefox/dist/include/nsBaseHashtable.h:345 2 xul.dll PL_DHashTableEnumerate obj-firefox/xpcom/build/pldhash.c:754 3 xul.dll nsDocument::doCreateShell content/base/src/nsDocument.cpp:3135 4 xul.dll nsHTMLDocument::CreateShell content/html/document/src/nsHTMLDocument.cpp:364 5 xul.dll DocumentViewerImpl::InitPresentationStuff layout/base/nsDocumentViewer.cpp:713 6 xul.dll DocumentViewerImpl::Show 7 xul.dll DocumentViewerImpl::ReturnToGalleyPresentation layout/base/nsDocumentViewer.cpp:4213 8 xul.dll DocumentViewerImpl::ExitPrintPreview layout/base/nsDocumentViewer.cpp:3963 9 xul.dll NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102 10 xul.dll js::InvokeCommon<int > js/src/jsinterp.cpp:566 11 xul.dll js::Invoke js/src/jsinterp.cpp:699 12 xul.dll js::Interpret js/src/jsinterp.cpp:4709 13 xul.dll js::InvokeCommon<int > js/src/jsinterp.cpp:577 14 xul.dll js::Invoke js/src/jsinterp.cpp:699 15 xul.dll js::InternalInvoke js/src/jsinterp.cpp:739 16 xul.dll nsJSContext::CallEventHandler dom/base/nsJSEnvironment.cpp:2248 17 xul.dll nsJSEventListener::HandleEvent dom/src/events/nsJSEventListener.cpp:228 18 xul.dll nsEventListenerManager::HandleEventSubType content/events/src/nsEventListenerManager.cpp:1106 19 xul.dll nsEventListenerManager::HandleEventInternal content/events/src/nsEventListenerManager.cpp:1202 20 xul.dll nsEventTargetChainItem::HandleEventTargetChain content/events/src/nsEventDispatcher.cpp:341 21 @0x1bd02b 22 @0x1000100 23 xul.dll nsEventDispatcher::DispatchDOMEvent content/events/src/nsEventDispatcher.cpp:691 24 xul.dll nsPresContext::GetContainerExternal layout/base/nsPresContext.cpp:1393 25 xul.dll PresShell::HandleDOMEventWithTarget layout/base/nsPresShell.cpp:6799 26 xul.dll nsContentUtils::DispatchXULCommand content/base/src/nsContentUtils.cpp:5470
Attached file testcase
The hider function was checking already, which is why you had to _exit_ print preview to crash.
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #469783 - Flags: review?(roc)
Blocks: 577607
blocking2.0: --- → final+
Component: Layout → DOM
Priority: -- → P1
QA Contact: layout → general
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
Target Milestone: --- → mozilla2.0b5
Verified fixed, using: Mozilla/5.0 (Windows NT 6.1; rv:2.0b6pre) Gecko/20100909 Firefox/4.0b6pre
Status: RESOLVED → VERIFIED
Crash Signature: [@ ExternalResourceShower]
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: