Bug 590883.  Don't forget to null-check the viewer, since the external resource load might have failed.  r=roc a=blocking